fix: fix role in user test